@@ -1,3 +1,12 @@
+2008-06-27  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* include/openbabel/obiter.h, src/obiter.cpp: Fix
+	PR#1901348. Add support for BFS iteration from arbitrary
+	atoms.
+
+	* include/openbabel/math/*.h, src/math/*.cpp: Updates to fix
+	some GCC warnings.
+
 2008-06-26  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/parsmart.cpp: Add support for Isotopes in SMARTS. Fixes
